--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ngTimepicker",
   "version": "0.8.0",
-  "homepage": "https://github.com/jkuri/ngTimepicker",
+  "homepage": "https://github.com/Stevio54/ngTimepicker",
   "authors": [
     "Jan Kuri <jkuri88@gmail.com>"
   ],
